--- a/results_accessory_shorter.Rmd
+++ b/results_accessory_shorter.Rmd
@@ -39,7 +39,7 @@ source("scripts/functions.R")
 * Note that each of these figures (and models) only includes individuals with non-zero reproductive investment
 
 ```{r, echo=FALSE,message=FALSE,,fig.width=14, fig.height=14}
-par(mfrow=c(2,2), cex=1, omi=c(2,0.3,.5,0.3), mai=c(.5,1,.5,0.3))
+par(mfrow=c(2,2), cex=1, omi=c(.6,0.3,.3,0.3), mai=c(.8,1,.3,0.3))
 mod <- lm (log(total_weight)~log(ReproInv), data=subset(SummaryInd,ReproInv>0))
 plot(ReproInv~total_weight,data=subset(SummaryInd,ReproInv>0), log="xy",xlab="", col=col.spp[as.factor(species)], pch=16, ylab="Total reproductive investment (mg)",xlim=c(100,2000000))
 words.bottom.right.logxy(mod)
@@ -54,12 +54,12 @@ legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
 
 mod <- lm (log(total_weight)~log(seedset), data=subset(SummaryInd,seedset>0))
-plot(seedset~total_weight,data=subset(SummaryInd,prop_propagule>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="seedset",xlim=c(100,2000000),xlab="Total size (mg)")
+plot(seedset~total_weight,data=subset(SummaryInd,prop_propagule>0), log="xy",col=col.spp[as.factor(species)], pch=16, ylab="seedset",xlim=c(100,2000000),xlab="")
 words.bottom.right.logxy(mod)
-mtext("Total size (mg)", 1, outer=TRUE)
+mtext("Total size (mg)", 1, outer=TRUE,cex=1.2)
 ```
 
-###How do accessory costs shift with seed size?
+### How do accessory costs shift with seed size?
 - Larger-seeded species have higher accessory costs, as has been shown in other studies
 - However, it is also true that "larger species" have higher accessory costs and than species with higher seed set have lower accessory costs
 - In contrast, there is a relatively low correlation between accessory costs and proportion reproductive energy invested in pre-pollination tissues DESPITE this being the biggest pool of energy for most species
@@ -68,7 +68,7 @@ mtext("Total size (mg)", 1, outer=TRUE)
 - Therefore, seed set goes up and by default, a greater proportion of energy goes into propagules and less into "accessory costs"
 
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
-par(mfrow=c(2,2), cex=1, omi=c(.1,0.3,.5,0.2), mai=c(1.1,1,.1,0.2))  
+par(mfrow=c(2,2), cex=1, omi=c(0.4,0.6,0.3,0.3), mai=c(1.1,0.8,0.3,0.3))
 mod <- lm(log(seed_size)~asin(sqrt(prop_accessory_mean)),SummarySpp)
 plot(asin(sqrt(prop_accessory_mean))~seed_size,SummarySpp, log="x", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="seed size (mg)",cex=1.3)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
@@ -85,11 +85,12 @@ words.top.right.logx(mod)
 mod <- lm(asin(sqrt(prop_prepollen_all_mean))~asin(sqrt(prop_accessory_mean)),SummarySpp)
 plot(asin(sqrt(prop_accessory_mean))~asin(sqrt(prop_prepollen_all_mean)),SummarySpp, log="", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
 words.top.right(mod)
-mtext("Proportion accessory investment (asin transformed)",2, outer=TRUE)
+mtext("Proportion reproductive investment to accessory tissues (asin transformed)",2, outer=TRUE,cex=1.2)
 ```
-###Looking at investment vs. costs per successful seed
+
+* investment vs. costs per successful seed
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
-par(mfrow=c(2,2), cex=1, omi=c(.1,0.3,.5,0.2), mai=c(1.1,1,.1,0.2))  
+par(mfrow=c(2,2), cex=1, omi=c(0.4,0.6,0.3,0.3), mai=c(1.1,0.8,0.3,0.3)) 
 mod <- lm(log(seed_size)~(accessory_per_seed_mean),SummarySpp)
 plot(accessory_per_seed_mean~seed_size,SummarySpp, log="xy", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="seed size (mg)",cex=1.3)
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
@@ -106,48 +107,56 @@ words.top.right.logxy(mod)
 mod <- lm(log(prepollen_all_per_seed_mean)~log(accessory_per_seed_mean),SummarySpp)
 plot(log(accessory_per_seed_mean)~log(prepollen_all_per_seed_mean),SummarySpp, log="", pch=16,col=col.spp[as.factor(species)],ylab="",xlab="pre-pollination costs (proportional)",cex=1.3)
 words.top.right(mod)
-mtext("Accessory investment per successful seed (log scale)",2, outer=TRUE)
+mtext("Accessory tissue investment per successful seed (mg)",2, outer=TRUE,cex=1.2)
 ```
 
-###Plotting accessory costs that go into making a single seed - ignoring aborted tissues
+### Plotting accessory costs that go into making a single seed - ignoring aborted tissues
 * Bigger seeds have bigger fixed costs of making that seed (1st plot)
 * But other than LEES having much lower costs, no shifts across species in their relative costs to make a seed (2nd plot)
 * In other words, patterns of accessory costs vs. seed size, plant size, etc come about due to the differential effect of bud, flower abortion across species  
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
 par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))
-plot(seed_size~seedcosts,data=subset(SummarySpp),log="xy",pch=16,col=col.spp[as.factor(species)])
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(seed_size~seedcosts,data=subset(SummarySpp),log="xy",pch=16,col=col.spp[as.factor(species)],xlab="costs to make 1 seed (mg)",cex=1.2)
+mod <- lm(seedcosts~seed_size, SummarySpp)
+words.bottom.right.logxy(mod)
+text(seed_size~seedcosts,data=subset(SummarySpp),labels=species, pos=1,offset=.6,cex=0.8,col="black")
 
-par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))
-plot(seed_size~costs_per_seed,data=subset(SummarySpp),log="y",pch=16,col=col.spp[as.factor(species)])
-legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+plot(seed_size~costs_per_seed,data=subset(SummarySpp),log="y",pch=16,col=col.spp[as.factor(species)],ylab="",xlab="proportional accessory costs, scaled by seed weight",cex=1.2)
+text(seed_size~costs_per_seed,data=subset(SummarySpp),labels=species, pos=1,offset=.6,cex=0.8,col="black")
+mod <- lm(costs_per_seed~seed_size, SummarySpp)
+words.bottom.left.logy(mod)
 ```
-
-
 
 * Here is the plot just of seed set by propagule investment (for all individuals), showing the effect is true within and across species
 * This is the complement to the plot of accessory costs  
-```{r, echo=FALSE,message=FALSE}
-par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
-mod <- lm(log(seedset)~(prop_accessory),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(prop_accessory~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="x", pch=16,col=col.spp[as.factor(species)],xlab="seed set")
-words.bottom.right.logx(mod)
-
-mod <- lm(log(seedset)~log(accessory_per_seed),data=subset(SummaryInd,seedset>0&seedset<1&accessory_per_seed>0))
-plot(accessory_per_seed~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="seed set")
-words.bottom.right.logxy(mod)
-legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
-```
-
-
 * Replotting the same data by age, shows that the pattern is not age-driven
-* At most, there are most "old" plants with very low seedset  
-```{r, echo=FALSE,message=FALSE}
-par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
-mod <- lm(asin(sqrt(seedset))~log(prop_propagule),data=subset(SummaryInd,seedset>0&seedset<1))
-plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.age[as.factor(age)],ylab="Accessory costs (asin transformed)",xlab="seed set")
+* At most, there are most "old" plants with very low seedset 
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
+par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.3,0.3), mai=c(0.8,1,0.3,0.3))  
+mod <- lm(log(seedset)~log(prop_propagule),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="proportion reproduction to propagules (1-accessory)")
+words.bottom.right.logxy(mod)
+legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+
+mod <- lm(log(seedset)~log(prop_propagule),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.age[as.factor(age)],ylab="proportion reproduction to propagules (1-accessory)",xlab="")
 words.bottom.right.logxy(mod)
 legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
+mtext("Seed set",1, outer=TRUE,cex=1.1)
+```
+
+*Comparing proportion energy to propagules vs accessory cost per seed
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
+par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.3,0.3), mai=c(0.8,1,0.3,0.3))  
+mod <- lm(log(seedset)~log(prop_propagule),data=subset(SummaryInd,seedset>0&seedset<1))
+plot(prop_propagule~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="proportion reproduction to propagules (1-accessory)")
+words.bottom.right.logxy(mod)
+legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+
+mod <- lm(log(seedset)~log(accessory_per_seed),data=subset(SummaryInd,seedset>0&seedset<1&accessory_per_seed>0))
+plot(accessory_per_seed~seedset,data=subset(SummaryInd,seedset>0&seedset<1), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="accessory costs per seed produced (mg)")
+words.bottom.left.logxy(mod)
+mtext("Seed set",1, outer=TRUE,cex=1.1)
 ```
 
 ###Relationship between tissue allocation and reproductive investment
@@ -156,21 +165,23 @@ legend("topleft",legend=names(labels.age),col=col.age,pch=16, cex=.8,bty="n")
 * However, proportional investment in propagules decreases with increasing reproductive investment, because the bigger species investment more overall in reproduction and less in propagules
 * There is also no pattern with respect to proportional investment in packaging and dispersal (R^2=0, p-value=0.959) and a slight decrease in aborted post-pollination tissues with increasing reproductive investment (R^2=0.0661, p-value=0.0002)
 ```{r, echo=FALSE,message=FALSE, ,fig.width=14, fig.height=7}
-par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
-mod <- lm(asin(sqrt(prop_prepollen_all))~log((ReproInv)),data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1))
-plot(asin(sqrt(prop_prepollen_all))~ReproInv,data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1), log="x", pch=16,col=col.spp[as.factor(species)])
+par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.1,0.3), mai=c(0.8,1,0.3,0.3))  
+mod <- lm(log(ReproInv)~(prop_prepollen_all),data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1))
+plot((prop_prepollen_all)~ReproInv,data=subset(SummaryInd,prop_prepollen_all>0&prop_prepollen_all<1), log="x", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Pre-pollination tissues (as proportion repro inv)")
 words.top.right.logx(mod)
 legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
  
-mod <- lm(asin(sqrt(prop_propagule))~log((ReproInv)),data=subset(SummaryInd,prop_propagule>0))
-plot(asin(sqrt(prop_propagule))~ReproInv,data=subset(SummaryInd,prop_propagule>0), log="x", pch=16,col=col.spp[as.factor(species)])
-words.top.right.logx(mod)
+mod <- lm(log(ReproInv)~log(prop_propagule),data=subset(SummaryInd,prop_propagule>0))
+plot(prop_propagule~ReproInv,data=subset(SummaryInd,prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],xlab="",ylab="Propagules (as proportion repro inv)")
+words.top.right.logxy(mod)
+mtext("Reproductive investment (mg)",1, outer=TRUE,cex=1.1)
 ```
 
 ###What happens against RA
 * Overall RA is correlated with reproductive investment and age
+* These plots only include individuals that have some reproductive investment
 ```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
-par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
+par(mfrow=c(1,2), cex=1, omi=c(0.3,0.3,0.1,0.3), mai=c(1.1,1,0.3,0.3)) 
 mod <- lm(log(RA)~log((ReproInv)),data=subset(SummaryInd,RA>0))
 plot(RA~(ReproInv),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy")
 words.bottom.right.logxy(mod)
@@ -180,17 +191,24 @@ mod <- lm(log(RA)~species*age*log((ReproInv)),data=subset(SummaryInd,RA>0))
 anova(mod)
 
 mod <- lm(log(RA)~log((age)),data=subset(SummaryInd,RA>0))
-plot(RA~(age),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy")
+plot(RA~(age),data=subset(SummaryInd,RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="")
 words.bottom.right.logxy(mod)
 ```
 
 * RA is also correlated with count of floral units - the total number of buds produced (i.e. final development stage can be buds, flowers, aborted fruit or fruit)
 * This is true for many individual species as well as across species
-```{r, echo=FALSE,message=FALSE}
+* RA and seed count are also correlated, but mainly that no low RA individuals have high seed counts
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
+par(mfrow=c(1,2), cex=1, omi=c(0.6,0.3,0.1,0.3), mai=c(0.8,1,0.3,0.3))  
 mod <- lm(log(RA)~log(repro_all_count),data=subset(SummaryInd,repro_all_count>0))
-plot(repro_all_count~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp[as.factor(species)],pch=16,log="xy")
+plot(repro_all_count~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp[as.factor(species)],pch=16,log="xy",ylab="# of buds produced",xlab="")
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 words.bottom.right.logxy(mod)
+
+mod <- lm(log(RA)~log(seed_count+.1),data=subset(SummaryInd,repro_all_count>0))
+plot((.1+seed_count)~RA,data=subset(SummaryInd,repro_all_count>0),col=col.spp[as.factor(species)],pch=16,log="xy",ylab="# of seeds produced",xlab="")
+words.bottom.right.logxy(mod)
+mtext("RA",1, outer=TRUE,cex=1.1)
 
 yvar <- "repro_all_count"
 xvar <- "RA"
@@ -208,46 +226,41 @@ results$b <- round(results$b,digits=2)
 results
 ```
 
-* This same pattern is true just looking  at pre-pollination tissues and at propagule allocation
+* This same pattern is true just looking  at energy invested in pre-pollination tissues and at propagule allocation
 * Plants that invest more in some reproductive tissues, on average, invest more in other reproductive tissues, so have a higher RA
-```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
-par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
+
+* Looking at proportions, the pattern is much less informative
+* Plants with higher RA have lower allocation to pre-pollination tissues, probably because of their higher seedset
+* Relationship between RA and proportion energy to propagules simply shows a species effect - different species have different RA values and different proportional propagule investment
+```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=14}
+par(mfrow=c(2,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 mod <- lm(log(RA)~log((prepollen_all_inv)),data=subset(SummaryInd,RA>0&prepollen_all_inv>0))
 plot(prepollen_all_inv~(RA),data=subset(SummaryInd,RA<1&RA>0), pch=16,col=col.spp[as.factor(species)],log="xy",ylab="pre-pollination tissues (mg)")
 words.bottom.right.logxy(mod)
+
 legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
 mod <- lm(log(RA)~log((propagule_inv)),data=subset(SummaryInd,RA>0&propagule_inv>0))
 plot(propagule_inv~(RA),data=subset(SummaryInd,RA>0&propagule_inv>0), pch=16,col=col.spp[as.factor(species)],log="xy", ylab="energy to propagules (mg)")
 words.bottom.right.logxy(mod)
-legend("topleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
-```
 
-* Looking at proportions, the pattern is much less informative
-* Plants with higher RA have lower allocation to pre-pollination tissues, probably because of their higher seedset
-* Total accessory costs and RA and rather unrelated - the plot shows a significant increase in accessory costs as RA increases, but this is mostly driven by BOLE
-
-```{r, echo=FALSE,message=FALSE,fig.width=14, fig.height=7}
-par(mfrow=c(1,2), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
 mod <- lm(asin(sqrt(RA))~asin(sqrt(prop_prepollen_all)),data=subset(SummaryInd,RA>0&prop_prepollen_all>0))
-plot(asin(sqrt(prop_prepollen_all))~asin(sqrt(RA)),data=subset(SummaryInd,RA>0&prop_prepollen_all>0), pch=16,col=col.spp[as.factor(species)])
+plot(asin(sqrt(prop_prepollen_all))~asin(sqrt(RA)),data=subset(SummaryInd,RA>0&prop_prepollen_all>0), pch=16,col=col.spp[as.factor(species)], ylab="pre-pollination tissues (as proportion repro inv) (asin)")
 words.top.right(mod)
 
-mod <- lm(asin(sqrt(RA))~asin(sqrt(prop_propagule)),data=subset(SummaryInd,RA>0))
-plot(asin(sqrt(prop_propagule))~asin(sqrt(RA)),data=subset(SummaryInd,RA>0&prop_propagule>0), pch=16,col=col.spp[as.factor(species)])
-words.top.right(mod)
+mod <- lm(log(RA)~log((prop_propagule)),data=subset(SummaryInd,RA>0&prop_propagule>0))
+plot((prop_propagule)~(RA),data=subset(SummaryInd,RA>0&prop_propagule>0), log="xy", pch=16,col=col.spp[as.factor(species)],ylab="propagules (as proportion repro inv)")
+words.bottom.left.logxy(mod)
 ```
 
 ###Shifts across age
-* Seedset shows a slight decrease with proportional plant height (the best proxy for "relative size"), but certainly no trend of increased seed set in older plants. 
+* Seedset shows a slight decrease with proportional plant height (the best proxy for "relative size")  
+* this pattern likely exists because species that begin reproducing at shorter proportional heights have higher seedset  
+* only LEES shows a significant decline with age, although most species have a segative slope  
 * there is a similar pattern for Propagule investment (not shown)  
-* a greater number of individuals become reproductively mature, but among reproducing individuals there is no shift in seedset or proportional propagule investment with age
-* same pattern using "age" as xvar
-
-
-*Results, by species, for seedset by proportional height
+* Table shows results, by species, for seedset by proportional height  
 ```{r, echo=FALSE,message=FALSE}
 par(mfrow=c(1,1), cex=1, omi=c(.1,.1,.1,.1), mai=c(1.1,1.1,.1,0.2))  
-mod <- lm(asin(sqrt(prop_maxH))~asin(sqrt(seedset)),data=subset(SummaryInd,seedset<1&seedset>0))
+mod <- lm((prop_maxH)~asin(sqrt(seedset)),data=subset(SummaryInd,seedset<1&seedset>0))
 plot(asin(sqrt(seedset))~prop_maxH,data=subset(SummaryInd,seedset<1&seedset>0), pch=16,col=col.spp[as.factor(species)])
 words.top.right(mod)
 legend("bottomleft",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
@@ -268,7 +281,8 @@ results$b <- round(results$b,digits=2)
 results
 ```
 
-*Results, by species, for seedset by age
+* Results, by species, for seedset by age  
+* Only HEPU, LEES show significant decline, but again mostly negative slopes
 ```{r, echo=FALSE,message=FALSE}
 yvar <- "seedset"
 xvar <- "age"
@@ -324,26 +338,57 @@ results
 
 ##Shifts in proportion to tissue types across species  
 - Reasonably idiosyncratic patterns
-- Propagule allocation across species  
 - COER, EPMI, LEES, PILI invest the most energy in propagules  
 - HATE invests by far the least into propagules  
-```{r, echo=FALSE, message=FALSE}
+```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=28}
+par(mfrow=c(4,2), cex=1, omi=c(1,.1,.7,.1), mai=c(.5,1.1,.2,0.2))  
 mean1 <- SummarySpp$prop_propagule_mean
 se1 <- SummarySpp$prop_propagule_se
-plot(mean1~species,SummarySpp,cex.axis=.7,pch=16,log="y",ylim=c(.002,.25),main="Percent reproductive investment put into propagules")
+plot(mean1~species,SummarySpp,cex.axis=.5,pch=16,log="y",ylim=c(.002,.25),ylab="propagules",xlab="")
 se_function(mean1,se1)
-```
 
-- pre-pollination allocation across species  
-```{r, echo=FALSE, message=FALSE}
+mean1 <- SummarySpp$propagule_per_seed_mean
+se1 <- SummarySpp$propagule_per_seed_se
+plot(mean1~species,SummarySpp,cex.axis=.5,pch=16,log="y",ylab="propagules",xlab="")
+se_function(mean1,se1)
+
 mean1 <- SummarySpp$prop_prepollen_all_mean
 se1 <- SummarySpp$prop_prepollen_all_se
-plot(mean1~species,data=subset(SummarySpp),cex.axis=.8,pch=16,ylim=c(.1,1),main="Percent reproductive investment put into pre-pollination tissues")
+plot(mean1~species,data=subset(SummarySpp),cex.axis=.5,pch=16,ylim=c(.1,1),ylab="pre-pollination tissues",xlab="")
 se_function(mean1,se1)
+
+mean1 <- SummarySpp$prepollen_all_per_seed_mean
+se1 <- SummarySpp$prepollen_all_per_seed_se
+plot((.01+prepollen_all_per_seed_mean)~species,data=subset(SummarySpp),cex.axis=.5,pch=16,ylab="pre-pollination tissues",xlab="",log="y")
+se_function(mean1,se1)
+
+mean1 <- SummarySpp$prop_packaging_dispersal_mean
+se1 <- SummarySpp$prop_packaging_dispersal_se
+plot(mean1~species,SummarySpp,cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="packaging and dispersal")
+se_function(mean1,se1)
+
+mean1 <- SummarySpp$packaging_dispersal_per_seed_mean
+se1 <- SummarySpp$packaging_dispersal_per_seed_se
+plot((packaging_dispersal_per_seed_mean+.1)~species,SummarySpp,cex.axis=.5,pch=16,ylab="packaging and dispersal",log="y")
+se_function(mean1,se1)
+
+mean1 <- SummarySpp$prop_postpollen_aborted_mean
+se1 <- SummarySpp$prop_postpollen_aborted_se
+plot(mean1~species,SummarySpp,cex.axis=.5,pch=16,log="y",ylim=c(.02,1),ylab="aborted post-pollination tissues")
+se_function(mean1,se1)
+
+mean1 <- SummarySpp$postpollen_aborted_per_seed_mean
+se1 <- SummarySpp$postpollen_aborted_per_seed_se
+plot((postpollen_aborted_per_seed_mean+.1)~species,SummarySpp,cex.axis=.5,pch=16,ylab="aborted post-pollination tissues",log="y")
+se_function(mean1,se1)
+            
+mtext("proportion of reproductive investment                                                                       mg investment per seed",3,outer=TRUE,cex=1.1)
+mtext("species",1, outer=TRUE,cex=1.1)
 ```
 
 - just looking among plants >3 years old  
-```{r, echo=FALSE, message=FALSE}
+```{r, echo=FALSE, message=FALSE, fig.width=14, fig.height=7}
+par(mfrow=c(1,2), cex=1, omi=c(1,.1,.7,.1), mai=c(.5,1.1,.2,0.2)) 
 tmp <- SummaryInd %>%
   filter(ReproInv!=0&age>3) %>%
   group_by(species) %>%
@@ -351,25 +396,13 @@ tmp <- SummaryInd %>%
 
 plot(mean~species,
     tmp,
-     cex.axis=.7,pch=16,log="y",ylim=c(.1,1),
-     main="Percent reproductive investment put into pre-pollination tissues")
+     cex.axis=.5,pch=16,log="y",ylim=c(.02,1),
+     ylab="Prop reproductive investment put into pre-pollination tissues")
 
 mean1 <- tmp$mean
 se1 <- tmp$se
 se_function(mean1,se1)
-```
- 
-- Packaging and dispersal allocation across species  
-```{r, echo=FALSE, message=FALSE}
-mean1 <- SummarySpp$prop_packaging_dispersal_mean
-se1 <- SummarySpp$prop_packaging_dispersal_se
 
-plot(mean1~species,SummarySpp,cex.axis=.8,pch=16,log="y",ylim=c(.02,1),main="Percent reproductive investment put into packaging and dispersal")
-se_function(mean1,se1)
-```
-
-- just looking among plants >3 years old  
-```{r, echo=FALSE, message=FALSE}
 tmp2 <- SummaryInd %>%
   filter(ReproInv!=0&age>3) %>%
   group_by(species) %>%
@@ -377,8 +410,8 @@ tmp2 <- SummaryInd %>%
 
 plot(mean~species,
     tmp2,
-     cex.axis=.7,pch=16,log="y",ylim=c(0.02,.8),
-     main="Percent reproductive investment put into packaging & dispersal tissues")
+     cex.axis=.5,pch=16,log="y",ylim=c(0.08,.8),
+     ylab="Prop reproductive investment put into packaging & dispersal tissues")
 
 mean1 <- tmp2$mean
 se1 <- tmp2$se
@@ -386,27 +419,6 @@ se1 <- tmp2$se
 se_function(mean1,se1)
 ```
 
-###Plots across species, with accessory costs on a per seed produced basis
-```{r, echo=FALSE, message=FALSE}
-mean1 <- SummarySpp$prepollen_all_per_seed_mean
-se1 <- SummarySpp$prepollen_all_per_seed_se
-plot(mean1~species,data=subset(SummarySpp),cex.axis=.8,pch=16,main="Investment into pre-pollination tissues per seed produced",log="y")
-se_function(mean1,se1)
-```{r, echo=FALSE, message=FALSE}
-
-```{r, echo=FALSE, message=FALSE}
-mean1 <- SummarySpp$accessory_per_seed_mean
-se1 <- SummarySpp$accessory_per_seed_se
-plot(mean1~species,data=subset(SummarySpp),cex.axis=.8,pch=16,main="Investment into all accessory tissues per seed produced",log="y")
-se_function(mean1,se1)
-```{r, echo=FALSE, message=FALSE}
-
-```{r, echo=FALSE, message=FALSE}
-mean1 <- SummarySpp$packaging_dispersal_per_seed_mean
-se1 <- SummarySpp$packaging_dispersal_per_seed_se
-plot((mean1)~species,data=subset(SummarySpp),cex.axis=.8,pch=16,main="Investment into packaging and dispersal tissues per seed produced")
-se_function(mean1,se1)
-```{r, echo=FALSE, message=FALSE}
 #Shifts in accessory costs across species and ages
 ##Overall results
 - Accessory costs higher for bigger seeds  
