--- a/results_growth.Rmd
+++ b/results_growth.Rmd
@@ -529,7 +529,97 @@ mtext("leaf lifespan",1,outer=TRUE)
 mtext("yearly growth (mg)",2,outer=TRUE)
 ```
 
+###PCA analysis
+* This combination of variables shows that RGR is approximately opposite a collection of variables that indicate a plant is "bigger" - so smaller plants have higher RGR
+* Orthoganal to these in WD vs. maxH, LMA_mean, seed_size, and shoot_growth - taller plants have bigger seeds, higher LMA, and greater shoot growth (both stem growth & leaf count), independent of their actual size
+* fine tuning above; no accessory proportions, because then have to use subset of reproducing individuals - see below
+* remove RGR leaf (similar to RGR)
+* remove prop_max_weight and prop_max_repro (similar to prop_maxH)
 
+```{r, echo=FALSE,message=FALSE,fig.width=10, fig.height=10}
+par(mfrow=c(1,1), cex=1, omi=c(.5,0.3,.1,0.2), mai=c(1.1,1,.6,0.2))
+SummaryIndPCA <- SummaryInd %>%
+  filter(lvs_end_total>0) %>%
+  select(prop_maxH,height,maxH_spp,WD_mean,LMA_mean,seed_size,growth_leaf,
+         RGR,leaf_area,growth_shoot_area,growth_stem_area,lvs_end_total,total_weight,
+         RA,seedset,repro_all_count,accessory_inv,propagule_inv)
+
+SummaryIndPCA$leaf_area <- log((SummaryIndPCA$leaf_area)+.001)
+SummaryIndPCA$total_weight <- log(SummaryIndPCA$total_weight)
+SummaryIndPCA$height <- log(SummaryIndPCA$height)
+SummaryIndPCA$maxH_spp <- log(SummaryIndPCA$maxH_spp)
+SummaryIndPCA$seed_size <- log(SummaryIndPCA$seed_size)
+SummaryIndPCA$accessory_inv <- log(SummaryIndPCA$accessory_inv+.001)
+SummaryIndPCA$propagule_inv <- log(SummaryIndPCA$propagule_inv+.001)
+SummaryIndPCA$growth_shoot_area <- log(SummaryIndPCA$growth_shoot_area)
+SummaryIndPCA$growth_leaf <- log(SummaryIndPCA$growth_leaf+10000)
+SummaryIndPCA$repro_all_count <- log(SummaryIndPCA$repro_all_count+1)
+SummaryIndPCA$lvs_end_total <- log(SummaryIndPCA$lvs_end_total)
+SummaryIndPCA$growth_stem_area <- log(SummaryIndPCA$growth_stem_area)
+
+PCA_mod <- prcomp(SummaryIndPCA, scale=TRUE)
+summary(PCA_mod)
+biplot(PCA_mod,xlim=c(-.1,.15),ylim=c(-.1,.1),cex=.8)
+
+PCA_loadings <- as.data.frame(PCA_mod$rotation)
+PCA_loadings$variables <- row.names(PCA_loadings)
+
+PCA_scaling <- as.data.frame(PCA_mod$scale)
+PCA_scaling$variables <- row.names(PCA_scaling)
+names(PCA_scaling) <- c("scale","variables")
+PCA_loadings <- merge(PCA_loadings,PCA_scaling,by="variables")
+PCA_loadings$PC1 <- PCA_loadings$PC1*PCA_loadings$scale
+PCA_loadings$PC2 <- PCA_loadings$PC2*PCA_loadings$scale
+PCA_loadings$PC3 <- PCA_loadings$PC3*PCA_loadings$scale
+
+PCA_rotated <- as.data.frame(PCA_mod$x)
+PCA_rotated$individual <- subset(SummaryInd$individual, SummaryInd$lvs_end_total>0)
+SummaryInd_PCA_results <- merge(SummaryInd,PCA_rotated, by="individual", all.x=TRUE)
+
+plot(PC1~PC2,SummaryInd_PCA_results,pch=16,col=col.spp[as.factor(species)])
+text(PC1~PC2,PCA_loadings,labels=variables, pos=2, offset=0, cex=0.9,col="black")
+legend("topright",legend=names(labels.spp),col=col.spp,pch=16, cex=.8,bty="n")
+```
+PCA_mod$rotation
+plot(PCA_mod)
+pairs(SummaryIndPCA,log="xy")
+
+looking at reproducing individuals - changes patterns quite a bit, with variables like maxH_spp pulling toward all the "big size" arrows
+SummaryIndPCA <- SummaryInd %>%
+  filter(lvs_end_total>0&accessory_inv>0) %>%
+  select(prop_maxH,maxH_spp,WD_mean,LMA_mean,seed_size,growth_leaf,
+         RGR,leaf_area,growth_shoot_area,growth_stem_area,lvs_end_total,total_weight,
+         RA,seedset,repro_all_count,accessory_inv,prop_accessory)
+
+
+###PCA analyses indicate a few clusters of variables
+* one is between RGR vs RA, maxH and various other measures of reproductive investment
+* the model shows that indeed RA and maxH explain most of the variation in RGR once species accounted for
+* and total plant weight is not significant - whether put before or after "repro_all_count"
+* patterns quite different when species removed and other traits that vary by species included
+
+```{r, echo=FALSE,message=FALSE}
+mod <- lm(RGR~species*asin(sqrt(RA))+prop_maxH+log(propagule_inv+1)+log(accessory_inv+1)+log(total_weight)+log(repro_all_count+1),SummaryInd)
+anova(mod)
+glance(mod)[1]
+
+
+mod <- lm(RGR~asin(sqrt(RA))+prop_maxH+log(propagule_inv+1)+log(accessory_inv+1)+log(total_weight)+log(repro_all_count+1)+WD_mean+LMA_mean+maxH_spp,SummaryInd)
+anova(mod)
+glance(mod)[1]
+```
+
+* another of the interesting pattern is that the increase in shoot area of leaders is correlated with maxH and seed_size (and opposite WD_mean) and somewhat offset from whole plant growth measures and whole plant size measures  
+* seed_size removed, because no additional explanatory power after WD and maxH_spp included
+
+
+```{r, echo=FALSE,message=FALSE}
+mod <- lm(log(growth_shoot_area)~log(maxH_spp)*WD_mean*log(growth_stem_area)*log(total_weight)*RGR*asin(sqrt(RA))*LMA_mean,SummaryInd)
+anova(mod)
+glance(mod)
+```
+
+plot(mod)
 ###Traits correlated
 - species maxH and wood density are highly correlated
 - the two species lying a bit outside are PUTU and PHPH which both often have multiple stems from the base - the second chart omits them
